# crown-social

./: .dockerignore  .env.example  .env.production  .env.production-auto  .gitignore  .gitignore.secrets  .trivyignore  ADVANCED_FEATURES_COMPLETE.md  ADVANCED_SECURITY_GUIDE.md  AVATAR_SYSTEM.md  CRITICAL_SECURITY_FIXES.md  DEEP_INTEGRATION_COMPLETE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOY_RENDER.md  DOCKER.md  Dockerfile.security  ENV_VARS_COPY_PASTE_SAFE.md  PHASE_1_COMPLETE.md  PHASE_2_ARCHITECTURE.md  PHASE_2_COMPLETE.md  README.md  RENDER_FIX_MONGODB.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION_COMPLETE.md  create-sample-posts.js  deploy-render.ps1  deploy-render.sh  docker-compose.dev.yml  package.json  render.yaml  run-tests.js  script.js  server.js  setup-render-env.js  test-map-simple.html  test-mongodb.js  test-navigation.html  test-phase1.js  test-results.json  (+2 more)
compliance-reports/: compliance-audit-ded1b4c7-0721-4b1d-b532-77f90b475f4b.json  compliance-audit-ded1b4c7-0721-4b1d-b532-77f90b475f4b.md
config/: app.js
deploy-cpanel/: .env.production  .htaccess  app.js  package-prod.json  web.config
docker/: mongo-init.js  nginx.conf  prometheus.yml  redis.conf
k8s/: security-policies.yaml
public/: favicon-generator.html
scripts/: .env.secrets  deploy.ps1  (+11 more)
services/auth-service-rust/: Cargo-enhanced.toml  Cargo.toml
services/auth-service-rust/src/: main.rs
services/media-service-cpp/: CMakeLists.txt  Dockerfile  README.md
services/media-service-cpp/src/: image_processor.cpp  image_processor.h  main.cpp  media_optimizer.cpp  media_optimizer.h  thumbnail_generator.cpp  thumbnail_generator.h  video_processor.cpp  video_processor.h
(+162 files in other folders)
